syntax = "proto3";
package merlion.maker.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/merlion-zone/merlion/x/maker/types";

// GenesisState defines the maker module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];

  string backing_ratio = 2 [
    (gogoproto.moretags) = "yaml:\"backing_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// Params defines the parameters for the maker module.
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  // step of adjusting backing ratio
  string backing_ratio_step = 1 [
    (gogoproto.moretags) = "yaml:\"backing_ratio_step\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // price band for adjusting backing ratio
  string backing_ratio_price_band = 2 [
    (gogoproto.moretags) = "yaml:\"backing_ratio_price_band\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // cooldown period for adjusting backing ratio
  int64 backing_ratio_cooldown_period = 3
      [ (gogoproto.moretags) = "yaml:\"backing_ratio_cooldown_period\"" ];
  // mint Mer price bias ratio
  string mint_price_bias = 4 [
    (gogoproto.moretags) = "yaml:\"mint_price_bias\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // burn Mer price bias ratio
  string burn_price_bias = 5 [
    (gogoproto.moretags) = "yaml:\"burn_price_bias\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // reback bonus ratio
  string reback_bonus = 6 [
    (gogoproto.moretags) = "yaml:\"reback_bonus\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  // liquidation commission fee ratio
  string liquidation_commission_fee = 7 [
    (gogoproto.moretags) = "yaml:\"liquidation_commission_fee\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
